--- a/notebooks/pfw_cleaning.ipynb
+++ b/notebooks/pfw_cleaning.ipynb
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b972084",
+   "id": "67cdb012",
    "metadata": {},
    "source": [
     "#### Replace NaN in numeric columns with -1 (an invalid value, to allow data type conversion)"
@@ -527,7 +527,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "f7861940",
+   "id": "99cd8956",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "34f330f6",
+   "id": "6f7fbdcf",
    "metadata": {},
    "outputs": [
     {
@@ -1568,7 +1568,7 @@
    "id": "f41321e7",
    "metadata": {},
    "source": [
-    "### Create a Family Subgroups dimension table to futher reduce redundancy"
+    "### Create a Family Subgroups subdimension table to futher reduce redundancy"
    ]
   },
   {
@@ -1983,8 +1983,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 60,
+   "id": "debee454",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['obs_id', 'sub_id', 'proj_period_id', 'month', 'day', 'year',\n",
+       "       'species_code', 'how_many', 'day1_am', 'day1_pm', 'day2_am', 'day2_pm',\n",
+       "       'effort_id', 'snow_dep_atleast', 'entry_id', 'state', 'loc_id',\n",
+       "       'latitude', 'longitude'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pfw_df_1988_2021.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "30c47f5d",
+   "id": "3df63b81",
    "metadata": {},
    "outputs": [],
    "source": []
